# geojson-vt-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yaml
benches/: benchmark.rs
fixtures/: last_feature-tile-broken-new.json  last_feature-tile-fixed.json  last_feature.json
src/: clip.rs  convert.rs  lib.rs  simplify.rs  tests.rs  tile.rs  types.rs  wrap.rs
