[package]
name = "geojson-vt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = { version = "1", features = ["arbitrary_precision"] }
geozero = "0.13.0"
geojson = "0.24.1"
euclid = "0.22.10"
